2003-11-10	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Reflect having moved to testsuites/.

2003-10-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_CANONICAL_HOST.

2003-10-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:Remove RTEMS_CHECK_CPU.

2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* itronhello/init.c, itronhello/itronhello.doc, itronhello/system.h,
	itronmbf01/init.c, itronmbf01/itronmbf01.doc, itronmbf01/system.h,
	itronmbox01/init.c, itronmbox01/system.h, itronsem01/init.c,
	itronsem01/itronsem01.doc, itronsem01/system.h, itrontask01/init.c,
	itrontask01/itrontask01.doc, itrontask01/system.h,
	itrontask01/task1.c, itrontask02/dormant.c, itrontask02/init.c,
	itrontask02/itrontask02.doc, itrontask02/system.h,
	itrontask03/init.c, itrontask03/itrontask03.doc,
	itrontask03/preempt.c, itrontask03/system.h, itrontask03/task1.c,
	itrontask03/task2.c, itrontask03/task3.c, itrontask04/init.c,
	itrontask04/itrontask04.doc, itrontask04/system.h,
	itrontask04/task1.c, itrontask04/task2.c, itrontask04/task3.c,
	itrontime01/init.c, itrontime01/system.h: URL for license changed.

2003-08-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved aclocal/.

2003-08-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved automake/.
	* itronhello/Makefile.am: Reflect having moved automake/.
	* itronmbf01/Makefile.am: Reflect having moved automake/.
	* itronmbox01/Makefile.am: Reflect having moved automake/.
	* itronsem01/Makefile.am: Reflect having moved automake/.
	* itrontask01/Makefile.am: Reflect having moved automake/.
	* itrontask02/Makefile.am: Reflect having moved automake/.
	* itrontask03/Makefile.am: Reflect having moved automake/.
	* itrontask04/Makefile.am: Reflect having moved automake/.
	* itrontime01/Makefile.am: Reflect having moved automake/.

2003-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
